--- a/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
+++ b/TravelOrganizationSystem/WebApp/Pages/Shared/_Layout.cshtml
@@ -79,6 +79,8 @@
                                         <i class="fas fa-route me-2"></i>Manage Trips</a></li>
                                     <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Guides/Index">
                                         <i class="fas fa-user-tie me-2"></i>Manage Guides</a></li>
+                                    <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/GuideAssignments/Index">
+                                        <i class="fas fa-user-plus me-2"></i>Guide Assignments</a></li>
                                     <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Bookings/Index">
                                         <i class="fas fa-list-alt me-2"></i>Manage Bookings</a></li>
                                     <li><a class="dropdown-item modern-dropdown-item" asp-area="" asp-page="/Admin/Users/Index">
